FEAT: design top

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <nav aria-label="Principal">
         <ul>
           <li><a href="#como-funciona">Como funciona</a></li>
+          <li><a href="#psicologos">Psicólogos</a></li>
           <li><a href="#faq">FAQ</a></li>
           <li><a class="btn" href="#contato">Começar agora</a></li>
         </ul>
@@ -41,16 +42,15 @@
         >
           <div>
             <h1 id="hero-title-paciente">
-              Encontre seu psicólogo online de forma rápida e segura
+              Cuide da sua saúde mental sem sair de casa
             </h1>
             <p>
-              Conecte-se com psicólogos qualificados para teleconsultas via
-              WhatsApp. Terapia online acessível, simples e humanizada para
-              cuidar da sua saúde mental.
+              Conecte-se diretamente com psicólogos verificados via WhatsApp. 
+              Agende sua consulta online em minutos e comece sua jornada de autoconhecimento hoje mesmo.
             </p>
             <div class="actions">
-              <a class="btn" id="startWhats" href="#" role="button"
-                >Encontrar psicólogo</a
+              <a class="btn" id="startWhats" href="#psicologos" role="button"
+                >Ver psicólogos disponíveis</a
               >
               <a class="btn-outline btn" href="#como-funciona">Como funciona</a>
             </div>
@@ -83,52 +83,48 @@
 
           <aside>
             <div class="card card-purple">
-              <h3 style="margin-bottom: 12px">Benefícios para pacientes</h3>
+              <h3 style="margin-bottom: 12px">Por que escolher a Psi?</h3>
               <ul style="list-style: none; color: #fff; line-height: 1.8">
-                <li>✓ Teleconsulta via WhatsApp</li>
-                <li>✓ Agendamento direto com o psicólogo</li>
-                <li>✓ Psicólogos verificados e qualificados</li>
-                <li>✓ Valores acessíveis</li>
-                <li>✓ Atendimento humanizado</li>
+                <li>✓ Atendimento 100% online pelo WhatsApp</li>
+                <li>✓ Sem burocracias ou esperas longas</li>
+                <li>✓ Psicólogos com CRP ativo verificado</li>
+                <li>✓ Valores combinados direto com o profissional</li>
+                <li>✓ Privacidade e sigilo garantidos</li>
               </ul>
             </div>
           </aside>
         </section>
 
         <section class="container">
-                    <h2 style="text-align: center; margin-bottom: 10px; color: #1a1a2e">
+          <h2 style="text-align: center; margin-bottom: 10px; color: #1a1a2e">
             A burocracia termina aqui!
           </h2>
           <div class="how" id="como-funciona">
             <div class="step">
-              <h4>1 — Escolha seu psicólogo</h4>
+              <h4>1 – Escolha seu psicólogo</h4>
               <p class="small">
-                Navegue pelos perfis e encontre o profissional ideal para suas
-                necessidades específicas.
+                Veja os perfis, especialidades e abordagens. Escolha quem mais combina com você.
               </p>
             </div>
             <div class="step">
-              <h4>2 — Converse via WhatsApp</h4>
+              <h4>2 – Converse no WhatsApp</h4>
               <p class="small">
-                Fale diretamente com o psicólogo pelo WhatsApp e agende sua
-                consulta.
+                Clique no botão, tire suas dúvidas e agende sua primeira consulta direto com o profissional.
               </p>
             </div>
             <div class="step">
-              <h4>3 — Faça sua teleconsulta</h4>
+              <h4>3 – Faça sua teleconsulta</h4>
               <p class="small">
-                Sessões online por videoconferência, no conforto e segurança da
-                sua casa.
+                Sessões online por vídeo, no horário que funciona para você, com total conforto e segurança.
               </p>
             </div>
           </div>
         </section>
 
-        <section class="container">
+        <section class="container" id="psicologos">
           <h3 style="text-align: center; margin-bottom: 24px; color: #1a1a2e">
-            Nossos Psicólogos Verificados
+            Conheça nossos psicólogos verificados
           </h3>
-        
 
           <!-- Catálogo de Profissionais -->
           <div class="psychologists-grid" id="psychologistsGrid">
@@ -142,154 +138,29 @@
 
         <section class="container">
           <h3 style="text-align: center; margin-bottom: 24px; color: #1a1a2e">
-            Por que escolher a Psi Telemedicina?
+            Por que milhares escolhem a Psi Telemedicina
           </h3>
           <div class="user-benefits">
             <div class="benefit-card">
               <div class="benefit-icon">🔒</div>
-              <h4>Segurança e privacidade</h4>
+              <h4>Segurança total</h4>
               <p class="small">
-                Consultas com criptografia e sigilo profissional garantido.
+                Todos os atendimentos seguem as normas do CFP com sigilo profissional absoluto.
               </p>
             </div>
             <div class="benefit-card">
               <div class="benefit-icon">⚡</div>
-              <h4>Conexão rápida</h4>
+              <h4>Rapidez sem burocracia</h4>
               <p class="small">
-                Encontre um psicólogo disponível e converse direto pelo
-                WhatsApp.
+                Em poucos cliques você está conversando com um psicólogo. Sem filas, sem espera.
               </p>
             </div>
             <div class="benefit-card">
               <div class="benefit-icon">💰</div>
-              <h4>Preços acessíveis</h4>
+              <h4>Transparência nos valores</h4>
               <p class="small">
-                Valores justos e transparentes, combinados diretamente com o
-                profissional.
+                Combine valores e formas de pagamento diretamente com seu psicólogo escolhido.
               </p>
-            </div>
-          </div>
-        </section>
-      </div>
-
-      <div id="psicologo-content" class="tab-content">
-        <section
-          class="container hero animate-fade-in"
-          aria-labelledby="hero-title-psicologo"
-        >
-          <div>
-            <h1 id="hero-title-psicologo">
-              Expanda sua prática psicológica com teleconsultas
-            </h1>
-            <p>
-              Conecte-se com mais pacientes através da nossa plataforma.
-              Gerencie seus atendimentos pelo WhatsApp de forma simples e
-              profissional.
-            </p>
-            <div class="actions">
-              <a class="btn" id="startWhatsPsy" href="#" role="button"
-                >Cadastrar como psicólogo</a
-              >
-              <a class="btn-outline btn" href="#como-funciona">Saiba mais</a>
-            </div>
-
-            <div class="card" style="margin-top: 24px">
-              <div
-                style="
-                  display: flex;
-                  justify-content: space-between;
-                  align-items: center;
-                "
-              >
-                <div>
-                  <div class="small">Psicólogos parceiros ganham até</div>
-                  <div
-                    style="font-weight: 800; font-size: 24px; color: #667eea"
-                  >
-                    R$ 8.000/mês
-                  </div>
-                  <div class="small">com teleconsultas online</div>
-                </div>
-                <img
-                  src="https://images.unsplash.com/photo-1582750433449-648ed127bb54?q=80&w=200&auto=format&fit=crop&crop=faces"
-                  alt="Psicólogo profissional"
-                  style="border-radius: 10px; height: 80px; object-fit: cover"
-                />
-              </div>
-            </div>
-          </div>
-
-          <aside>
-            <div class="card card-purple">
-              <h3 style="margin-bottom: 12px">Benefícios para psicólogos</h3>
-              <ul style="list-style: none; color: #fff; line-height: 1.8">
-                <li>✓ Perfil verificado na plataforma</li>
-                <li>✓ Atendimento via WhatsApp</li>
-                <li>✓ Flexibilidade de horários</li>
-                <li>✓ Conexão com pacientes qualificados</li>
-                <li>✓ Suporte técnico dedicado</li>
-              </ul>
-            </div>
-          </aside>
-        </section>
-
-        <section class="container features" style="margin: 0 auto">
-          <div>
-            <h3>O que oferecemos</h3>
-            <div style="margin-top: 16px">
-              <div class="feature">
-                <div class="icon">👥</div>
-                <div>
-                  <strong>Conexão com pacientes</strong>
-                  <div class="small">
-                    Apareça para pessoas que buscam seus serviços e
-                    especialidades.
-                  </div>
-                </div>
-              </div>
-
-              <div class="feature">
-                <div class="icon">📱</div>
-                <div>
-                  <strong>Gestão via WhatsApp</strong>
-                  <div class="small">
-                    Atenda e organize seus horários direto pelo WhatsApp.
-                  </div>
-                </div>
-              </div>
-
-              <div class="feature">
-                <div class="icon">✅</div>
-                <div>
-                  <strong>Verificação profissional</strong>
-                  <div class="small">
-                    Selo de verificado que aumenta a confiança dos pacientes.
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div>
-            <h3>Como começar</h3>
-            <ol
-              style="
-                margin-top: 16px;
-                padding-left: 20px;
-                color: #64748b;
-                line-height: 1.8;
-              "
-            >
-              <li>Fazer cadastro com documentos do CRP</li>
-              <li>Configurar perfil com especialidades e valores</li>
-              <li>Passar pela nossa verificação</li>
-              <li>Começar a receber contatos de pacientes</li>
-            </ol>
-
-            <div style="margin-top: 20px">
-              <a id="signUpBtn" class="btn" href="#contato"
-                >Quero me cadastrar</a
-              >
             </div>
           </div>
         </section>
@@ -310,19 +181,19 @@
         </details>
 
         <details>
-          <summary>Os psicólogos são verificados?</summary>
+          <summary>Os psicólogos são realmente verificados?</summary>
           <div style="margin-top: 12px" class="small">
-            Sim, todos passam por verificação rigorosa: validação do CRP ativo,
-            análise de documentos e avaliação baseada no feedback dos pacientes.
+            Sim! Todos passam por verificação rigorosa: validação do CRP ativo,
+            análise de documentos profissionais e avaliação contínua baseada no feedback dos pacientes.
           </div>
         </details>
 
         <details>
           <summary>Como funciona o pagamento?</summary>
           <div style="margin-top: 12px" class="small">
-            O pagamento é combinado diretamente com o psicólogo escolhido pelo
-            WhatsApp. Cada profissional tem suas formas de pagamento (PIX,
-            transferência, etc.).
+            O pagamento é combinado diretamente com o psicólogo pelo
+            WhatsApp. Cada profissional define suas formas de pagamento (PIX,
+            transferência, cartão, etc.) e você negocia o valor diretamente.
           </div>
         </details>
 
@@ -330,25 +201,25 @@
           <summary>Posso cancelar ou remarcar consultas?</summary>
           <div style="margin-top: 12px" class="small">
             Sim, combine as políticas de cancelamento e remarcação diretamente
-            com seu psicólogo pelo WhatsApp.
+            com seu psicólogo pelo WhatsApp. Cada profissional tem sua própria política.
           </div>
         </details>
 
         <details>
           <summary>Como me cadastrar como psicólogo?</summary>
           <div style="margin-top: 12px" class="small">
-            Entre em contato conosco pelo WhatsApp, envie seus documentos (CRP,
+            Entre em contato conosco pelo WhatsApp, envie seus documentos (CRP ativo,
             diploma) e informações profissionais. Fazemos a verificação em até
-            48h.
+            48h e você já pode começar a receber pacientes.
           </div>
         </details>
       </section>
 
       <section class="container" id="contato" style="padding-bottom: 60px">
         <div class="card" style="text-align: center; padding: 32px">
-          <h3>Pronto para começar?</h3>
+          <h3>Pronto para começar sua terapia?</h3>
           <p class="small" style="margin: 12px 0 24px">
-            Fale conosco agora mesmo ou preencha o formulário abaixo.
+            Fale conosco agora ou deixe suas informações que entramos em contato.
           </p>
 
           <div class="form-group">
@@ -365,11 +236,10 @@
             <select id="userType" class="form-input">
               <option value="">Eu sou...</option>
               <option value="paciente">Paciente buscando terapia</option>
-              <option value="psicologo">Psicólogo interessado</option>
+              <option value="psicologo">Psicólogo interessado em cadastro</option>
             </select>
-            <button class="btn" id="sendForm">Enviar</button>
+            <button class="btn" id="sendForm">Enviar mensagem</button>
           </div>
-
         </div>
       </section>
 
@@ -384,14 +254,14 @@
             </div>
           </div>
           <div class="small">
-            © <span id="year"></span> — Conectando mentes, cuidando de vidas
+            © <span id="year"></span> – Conectando mentes, cuidando de vidas
           </div>
         </div>
 
         <div class="contact-card">
           <div class="small">Atendimento 24/7</div>
           <a class="btn" href="https://www.instagram.com/psitelemedicina/" target="_blank"
-            >WhatsApp</a
+            >Fale conosco</a
           >
         </div>
       </footer>
