feat: melhorias na copy

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                   >
                     500+ psicólogos
                   </div>
-                  <div class="small">cadastrados e verificados</div>
+                  <div class="small">Onde você pode ser quem é, sem pressa e sem julgamentos.</div>
                 </div>
                 <img
                   src="https://images.unsplash.com/photo-1559757148-5c350d0d3c56?q=80&w=200&auto=format&fit=crop&crop=faces"
@@ -96,8 +96,8 @@
         </section>
 
         <section class="container">
-          <h2 style="text-align: center; margin-bottom: 10px; color: #1a1a2e">
-            A burocracia termina aqui!
+          <h2 style="text-align: center;color: #1a1a2e">
+            Conecte-se com o profissional via WhatsApp e agende sua primeira consulta de forma simples e rápida.
           </h2>
           <div class="how" id="como-funciona">
             <div class="step">
@@ -122,7 +122,7 @@
         </section>
 
         <section class="container" id="psicologos">
-          <h3 style="text-align: center; margin-bottom: 24px; color: #1a1a2e">
+          <h3 style="text-align: center;  color: #1a1a2e">
             Conheça nossos psicólogos verificados
           </h3>
 
@@ -266,14 +266,6 @@
         </div>
       </footer>
     </main>
-
-    
-      class="whatsapp-fab"
-      href="https://www.instagram.com/psitelemedicina/"
-      target="_blank"
-      aria-label="Abrir WhatsApp"
-    >
-      💬
     </a>
 
     <script src="js/script.js"></script>
